@@ -29,7 +29,7 @@ include (dirname(__FILE__)."/../db_php_lib/Class.Table.php");
 include (dirname(__FILE__)."/../Class.A2Billing.php");
 include (dirname(__FILE__)."/../Misc.php");
 
-$verbose_level=5;
+$verbose_level=0;
 
 $groupcard=5000;
 
