@@ -234,7 +234,7 @@ $HD_Form -> AddEditElement (gettext("BALANCE"),
 			   "size=30 maxlength=30",
 			   "12",
 			   gettext("Insert the number of credit"),
-			   "" , "", "",	"", "", "",	"", gettext("currency : ").strtoupper(BASE_CURRENCY) );
+			   "" , "", "", "", "", "", "", gettext("currency : ").strtoupper(BASE_CURRENCY) );
 
 
 $HD_Form -> AddEditElement (gettext("LANGUAGE"),
