@@ -5,6 +5,12 @@
 ********************************************************************
 
 
+#### DID CRONT - currency cc_charge
+********************************************************************
+1#  add currency
+	a2billing_bill_diduse.php
+	
+	
 #### JQUERY SLIDE
 ********************************************************************
 Menu with Jquery
